<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="#9963789b"
    android:gravity="bottom"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">
    <!--android:background="@drawable/mountain_background"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="30dp"
        android:orientation="vertical">
        <!--android:background="@drawable/gradient_background_teal"-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:src="@drawable/letsbone_logo"/>

            <ImageView
                android:id="@+id/imageViewDrawer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/nav_header_desc"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                app:srcCompat="@drawable/user" />


        </LinearLayout>


        <!--app:srcCompat="@mipmap/ic_launcher_round" />-->



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="157dp"
                android:layout_height="wrap_content"

                android:gravity="center_vertical"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            <TextView
                android:id="@+id/textViewNavUserSignOut"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/round_shape"
                android:gravity="bottom"
                android:layout_marginLeft="15dp"
                android:text="@string/sign_out"
                android:textColor="@android:color/background_light"
                android:textStyle="italic" />
            <!--<ImageView-->
            <!--android:id="@+id/imageView"-->
            <!--android:layout_width="24dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:contentDescription="@string/nav_header_desc"-->
            <!--app:srcCompat="@drawable/sign_out" />-->
        </LinearLayout>

        <TextView
            android:id="@+id/textViewNavUser"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/nav_header_subtitle" />

    </LinearLayout>



</LinearLayout>
